Change log updated for v1.2
Signed-off-by: Martin Sustrik <sustrik@250bpm.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -11,3 +11,9 @@ Explicit commands for loading input files added:
 - /!loadyaml
 - /!loadxml
 
+1.2
+===
+
+- improved Vim support
+- input() function added
+
