--- a/ChangeLog
+++ b/ChangeLog
@@ -53,3 +53,9 @@ Explicit commands for loading input files added:
 - It is possible to generate the code generator (RNA script) separately, so that
   it can be distributed to the users without a dependency on ribosome itself.
 
+1.9
+===
+
+- automake build system added
+- tests added
+
