ChangeLog for 1.10 added
Signed-off-by: Martin Sustrik <sustrik@250bpm.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -59,3 +59,9 @@ Explicit commands for loading input files added:
 - automake build system added
 - tests added
 
+1.10
+====
+
+- /!append command implemented. It appends to the output file rather than
+  overwriting it.
+
