ChangeLog updated for 1.11 release
Signed-off-by: Martin Sustrik <sustrik@250bpm.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -65,3 +65,8 @@ Explicit commands for loading input files added:
 - /!append command implemented. It appends to the output file rather than
   overwriting it.
 
+1.11
+====
+
+- Bugfix release (proper handling of relative paths in /!include command.
+
