JavaScript version of ribosome added.
License changed to MIT/X11 as approved by Apostolis.

Signed-off-by: sustrik <sustrik@localhost>

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
+Apostolis Xekoukoulotakis <xekoukou@gmail.com>
 Martin Lucina <martin@lucina.net>
 Martin Sustrik <sustrik@250bpm.com>
 Reid Hartenbower <reid@hartenbower.com>
