--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
+Ali Zaidi <alixedi@gmail.com>
 Apostolis Xekoukoulotakis <xekoukou@gmail.com>
 Martin Lucina <martin@lucina.net>
 Martin Sustrik <sustrik@250bpm.com>
