ChangeLog adjused for v1.14
Signed-off-by: Martin Sustrik <sustrik@250bpm.com>

--- a/ChangeLog
+++ b/ChangeLog
@@ -80,4 +80,12 @@ Explicit commands for loading input files added:
 
 - JavaScript version of ribosome added
 
+1.14
+====
+
+- Python version of ribosome added
+- Version reporting
+- Several bug fixes
+
+
 
