Mikael Goransson added to AUTHORS file
Signed-off-by: Martin Sustrik <sustrik@250bpm.com>

--- a/AUTHORS
+++ b/AUTHORS
@@ -2,4 +2,7 @@ Ali Zaidi <alixedi@gmail.com>
 Apostolis Xekoukoulotakis <xekoukou@gmail.com>
 Martin Lucina <martin@lucina.net>
 Martin Sustrik <sustrik@250bpm.com>
+Mikael Göransson <github@mgor.se>
 Reid Hartenbower <reid@hartenbower.com>
+
+
