Quetzal Bradley added to AUTHORS file
Signed-off-by: Martin Sustrik <sustrik@250bpm.com>

--- a/AUTHORS
+++ b/AUTHORS
@@ -3,6 +3,7 @@ Apostolis Xekoukoulotakis <xekoukou@gmail.com>
 Martin Lucina <martin@lucina.net>
 Martin Sustrik <sustrik@250bpm.com>
 Mikael Göransson <github@mgor.se>
+Quetzal Bradley <qbradley@qbradley.com>
 Reid Hartenbower <reid@hartenbower.com>
 
 
