AUTHORS file updated
Signed-off-by: Martin Sustrik <sustrik@250bpm.com>

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,6 @@
 Ali Zaidi <alixedi@gmail.com>
 Apostolis Xekoukoulotakis <xekoukou@gmail.com>
+Jesse Talavera-Greenberg <jessetalavera@aol.com>
 Martin Lucina <martin@lucina.net>
 Martin Sustrik <sustrik@250bpm.com>
 Mikael Göransson <github@mgor.se>
